liveness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: liveness-pod
  name: liveness-pod
spec:
  containers:
  - image: busybox
    name: liveness-pod
    command: ['sh', '-c', 'while true; do sleep 10; done']
    livenessProbe:
      exec:
        command: ['echo', 'Health check!']
      initialDelaySeconds: 10
      periodSeconds: 5
