persistent-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pv-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: pv-claim
  containers:
    - name: pv-container
      image: busybox
      command: ["/bin/sh"]
      args: ["-c", "while true; do echo 'Hello!' >> /etc/data/output.log; sleep 5m; done"]
      volumeMounts:
        - mountPath: "/etc/data"
          name: pv-storage
# Ensure /mnt/data exists on nodes
# Review:
# kubectl get pv,pvc
# cat /mnt/data/output.log
