readiness-probe.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: readiness-pod
  name: readiness-pod
spec:
  containers:
  - image: nginx
    name: readiness-pod
    ports:
    - containerPort: 80
    livenessProbe: 
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 5
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 20
      periodSeconds: 5
