service-account.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-pod
spec:
  # Allows SA to authenticate
  serviceAccountName: my-sa
  containers:
  - name: busybox
    image: radial/busyboxplus:curl
    # Attempt to list pods via API server
    # SA uses a token to authenticate
    command: ['sh', '-c', 'while true; do curl -s --header "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" --cacert /var/run/secrets/kubernetes.io/serviceaccount/ca.crt https://kubernetes/api/v1/namespaces/default/pods; sleep 5; done']
# Verify:
# k logs sa-pod
