service.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: svc-server
  name: svc-server-pod
spec:
  containers:
  - image: nginx
    name: svc-server-pod
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: svc-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
# Test access:
# curl <svc ip>:8080
---
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc
spec:
  type: NodePort
  selector:
    app: svc-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
      nodePort: 30080
# Test access:
# curl localhost:30080
# curl <any node ip>:30080
