network-policy-03.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-default-deny-ingress
  namespace: np-test-a
spec:
  # Apply to all pods
  podSelector: {}
  policyTypes:
  - Ingress
# Client should no longer be able to access server pod after applying this:
# # k logs client-pod -n np-test-b
